tests/negative/gold/type_no_optimize_test.gold
tests/negative/type_no_optimize_test.toit:11:3: error: Field 'field' must be initialized in a constructor
  field/string
  ^~~~~
Class 'Null_' does not have any method 'copy'.
  0: A.foo                     tests/negative/type_no_optimize_test.toit:14:18
  1: main                      tests/negative/type_no_optimize_test.toit:18:5
